--- a/package.json
+++ b/package.json
@@ -4,15 +4,33 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "@react-navigation/native": "^7.1.27",
+    "@react-navigation/stack": "^7.6.14",
     "expo": "~54.0.31",
+    "expo-clipboard": "~8.0.8",
+    "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
+    "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "^2.30.0",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "^5.6.2",
+    "react-native-screens": "^4.19.0",
+    "react-native-svg": "^15.15.1",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.21.0"
   },
   "private": true
 }
